--- a/stageone.css
+++ b/stageone.css
@@ -19,6 +19,6 @@ flex-direction: column;
     border-radius: 90px;
 }
 .github_link{
-    color: black;
+    text-decoration: none;
     font-size: large;
 }
