--- a/stageone.css
+++ b/stageone.css
@@ -8,7 +8,7 @@
 flex-direction: column;
     width:550px;
     height:550px;
-    margin:10px auto;
+    margin:auto;
     border-radius: 3px;
     
 }
